# zavrsniRad

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  seq_j30B.txt
alignment/: CMakeLists.txt  Makefile  alignment.cpp  alignment.h  cmake_install.cmake
